tests/baselines/reference/tsxAttributeResolution3.errors.txt
tests/cases/conformance/jsx/file.tsx(19,8): error TS2322: Type '{ x: 数字; }' is not assignable to type 'Attribs1'.
  Types of property 'x' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/conformance/jsx/file.tsx(23,8): error TS2322: Type '{ y: 数字; }' is not assignable to type 'Attribs1'.
  Property 'x' is missing in type '{ y: 数字; }'.
tests/cases/conformance/jsx/file.tsx(31,8): error TS2322: Type '{ x: 数字; y: 数字; }' is not assignable to type 'Attribs1'.
  Types of property 'x' are incompatible.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/conformance/jsx/file.tsx (3 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		test1: Attribs1;
    	}
    }
    interface Attribs1 {
    	x: string;
    	y?: number;
    	z?: string;
    }
    
    // OK
    var obj1 = { x: 'foo' };
    <test1 {...obj1} />
    
    // Error, x is not string
    var obj2 = { x: 32 };
    <test1 {...obj2} />
           ~~~~~~~~~
!!! error TS2322: Type '{ x: 数字; }' is not assignable to type 'Attribs1'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    
    // Error, x is missing
    var obj3 = { y: 32 };
    <test1 {...obj3} />
           ~~~~~~~~~
!!! error TS2322: Type '{ y: 数字; }' is not assignable to type 'Attribs1'.
!!! error TS2322:   Property 'x' is missing in type '{ y: 数字; }'.
    
    // OK
    var obj4 = { x: 32, y: 32 };
    <test1 {...obj4} x="ok" />
    
    // Error
    var obj5 = { x: 32, y: 32 };
    <test1 x="ok" {...obj5} />
           ~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ x: 数字; y: 数字; }' is not assignable to type 'Attribs1'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    
    // Ok
    var obj6 = { x: 'ok', y: 32, extra: 100 };
    <test1 {...obj6} />
    
    // OK (spread override)
    var obj7 = { x: 'foo' };
    <test1 x={32} {...obj7} />
    